# 99-bottles

./: README.md  pyproject.toml
ninetyninebottles/: i18n.py  main.py
po/: build-babel.py  es.po
