[tool.poetry]
name = "99-bottles"
version = "0.1.0"
description = "Python translation example using 99 Bottles of Beer"
authors = ["Dan Yeaw <dan@yeaw.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "99_bottles"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
